--- a/dev/index.html
+++ b/dev/index.html
@@ -181,8 +181,8 @@
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/team/sathe.jpeg">
-              <img class="img-fluid" src="img/team/sathe.jpeg" alt="">
+            <a class="portfolio-box" href="img/team/sathe.jpg">
+              <img class="img-fluid" src="img/team/sathe.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">
