--- a/dev/index.html
+++ b/dev/index.html
@@ -285,7 +285,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4 mx-auto text-align-center valign">
-            <img class="img-fluid" src="img/sponsors/CBIT-centered.jpg" alt="">
+            <img class="img-fluid" src="img/sponsors/CBIT-centered.png" alt="">
           </div>
           <div class="col-lg-4 mx-auto text-align-center valign">
             <img class="img-fluid" src="img/sponsors/city.png" alt="">
