--- a/dev/index.html
+++ b/dev/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">Hack the
-          <span style="background-color: #37474f">&nbspOR&nbsp</span></a>
+          <span style="background-color: #03a9f4">&nbspOR&nbsp</span></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
