--- a/dev/index.html
+++ b/dev/index.html
@@ -67,7 +67,7 @@
             <div class="col-lg-6 mx-auto text-align-middle">
               <h2 class = "m_align">Saturday, September 29, 2018
               <br><br>THE ANLYAN CENTER<br>300 Cedar Street, New Haven, CT
-              <br>REFRESHMENTS WILL BE SERVED</h2>
+              <br><br>REFRESHMENTS WILL BE SERVED</h2>
             </div>
           </div>
           <!-- <div class="row">
