--- a/dev/index.html
+++ b/dev/index.html
@@ -71,19 +71,19 @@
 
               <form>
                 <div class="form-group row">
-                  <label for="exampleInputEmail1">Name</label>
-                  <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="name">
+                  <label for="exampleInputEmail1">Hi, I'm</label>
+                  <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
                   <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
 
                 <div class="form-group row">
-                  <label for="exampleInputEmail1">Email address</label>
+                  <label for="exampleInputEmail1">My email is </label>
                   <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                   <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                 </div>
 
                 <div class="form-group row">
-                  <label for="exampleSelect1">Example select</label>
+                  <label for="exampleSelect1">and I'm a </label>
                   <select class="form-control form-control-lg" id="exampleSelect1">
                     <option>Attending</option>
                     <option>Resident</option>
