--- a/dev/index.html
+++ b/dev/index.html
@@ -72,8 +72,10 @@
               <form>
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="exampleInputEmail1">Hi, I'm</label>
-                  <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
+                  <div class="col-sm-4">
+                    <input type="text" class="form-control form-control-lg" id="inputName" aria-describedby="inputName" placeholder="Name">
                   <!-- <small id="nameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                  </div>
                 </div>
 
                 <div class="form-group row">
