--- a/dev/index.html
+++ b/dev/index.html
@@ -88,7 +88,7 @@
 
                 <div class="form-group row">
                   <label class="col-sm-4 col-form-label" for="exampleSelect1">and I'm a </label>
-                  <div class="col-sm-6">
+                  <div class="col-sm-8">
                     <select class="form-control form-control-lg" id="exampleSelect1">
                       <option>Attending</option>
                       <option>Resident</option>
@@ -102,7 +102,7 @@
 
                 <div class="form-group row">
                   <label class="col-sm-6 col-form-label" for="exampleSelect1">interested in being a</label>
-                  <div class="col-sm-4">
+                  <div class="col-sm-6">
                     <select class="form-control form-control-lg" id="exampleSelect1">
                       <option>participant</option>
                       <option>mentor</option>
@@ -110,7 +110,12 @@
                     </select>
                   </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+
+                <div class="form-group row">
+                  <label class="col-sm-6 col-form-label" for="exampleSelect1">at the hackathon.</label>
+                  <div class="col-sm-6">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
               </form>
 
 
