--- a/dev/index.html
+++ b/dev/index.html
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label class="col-sm-4 col-form-label" for="exampleInputEmail1">My email is </label>
+                  <label class="col-sm-4 col-form-label col-form-label-lg" for="exampleInputEmail1">My email is </label>
                   <div class="col-sm-8">
                     <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                   </div>
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label class="col-sm-4 col-form-label" for="exampleSelect1">and I'm a </label>
+                  <label class="col-sm-4 col-form-label col-form-label-lg" for="exampleSelect1">and I'm a </label>
                   <div class="col-sm-8">
                     <select class="form-control form-control-lg" id="exampleSelect1">
                       <option>Attending</option>
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label class="col-sm-6 col-form-label" for="exampleSelect1">interested in being a</label>
+                  <label class="col-sm-6 col-form-label col-form-label-lg" for="exampleSelect1">interested in being a</label>
                   <div class="col-sm-6">
                     <select class="form-control form-control-lg" id="exampleSelect1">
                       <option>participant</option>
@@ -112,7 +112,7 @@
                 </div>
 
                 <div class="form-group row">
-                  <label class="col-sm-6 col-form-label" for="exampleSelect1">at the hackathon.</label>
+                  <label class="col-sm-6 col-form-label col-form-label-lg" for="exampleSelect1">at the hackathon.</label>
                   <div class="col-sm-6">
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </div>
