--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 
             <div class="col-lg-6 mx-auto malign text-align-left">
               <p class="intro-text">Sign up for more information:</p>
+
               <form name="submit-to-google-sheet" id = "submit-to-google-sheet">
+
                 <div class="form-group row align-items-left">
                   <div class="col-auto">
                     <label class="col-form-label col-form-label-lg" for="hiim">Hi, I'm</label>
@@ -144,7 +146,9 @@
                 </div>
                 <div class="form-group row align-items-left">
                   <p>&nbsp;&nbsp;&nbsp;</p>
-                  <button id="submit-form" type="submit" class="btn btn-default btn-lg">LET'S GO!</button>
+
+                  <button type="submit" id="submit-form" class="btn btn-default btn-lg">LET'S GO!</button>
+
                 </div>
               </form>
 
